// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthPaginator should render correctly with ghost 1`] = `
.emotion-0 {
  padding: -2rem;
}

.emotion-1 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content, max-content);
  grid-gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-2>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58, 58, 71, 0.1);
}

.emotion-3 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin: auto -1rem;
}

.emotion-4>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.1);
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-4:not(:disabled):hover {
  background-color: rgba(58, 58, 71, 0.1);
}

.emotion-5 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  font-size: 0.875rem;
  font-weight: bold;
}

<div>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <button
          class="emotion-2"
          data-testid="MonthPaginator.PrevButton"
          title="Previous month"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-3"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                clip-rule="evenodd"
                d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
              />
            </svg>
          </span>
        </button>
        <button
          class="emotion-4"
          data-testid="MonthPaginator.ShowMonthsButton"
          title="Show months"
          type="button"
        >
          <span>
            <span
              class="emotion-5"
            >
              Jan - 
              2019
            </span>
          </span>
        </button>
        <button
          class="emotion-2"
          data-testid="MonthPaginator.NextButton"
          title="Next month"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-3"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                clip-rule="evenodd"
                d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MonthPaginator should render correctly with month and year 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 1rem 0.5rem;
  background-color: #FFFFFF;
  border: 1px solid #D3D4DD;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2),0 3px 1px -2px rgba(0, 0, 0, 0.12),0 2px 2px 0 rgba(0, 0, 0, 0.14);
  border-radius: 2px;
}

.emotion-1 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content, max-content);
  grid-gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-2>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58, 58, 71, 0.1);
}

.emotion-3 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin: auto -1rem;
}

.emotion-4>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.1);
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-4:not(:disabled):hover {
  background-color: rgba(58, 58, 71, 0.1);
}

.emotion-5 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  font-size: 0.875rem;
  font-weight: bold;
}

<div>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <button
          class="emotion-2"
          data-testid="MonthPaginator.PrevButton"
          title="Previous month"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-3"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                clip-rule="evenodd"
                d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
              />
            </svg>
          </span>
        </button>
        <button
          class="emotion-4"
          data-testid="MonthPaginator.ShowMonthsButton"
          title="Show months"
          type="button"
        >
          <span>
            <span
              class="emotion-5"
            >
              Jan - 
              2019
            </span>
          </span>
        </button>
        <button
          class="emotion-2"
          data-testid="MonthPaginator.NextButton"
          title="Next month"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-3"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                clip-rule="evenodd"
                d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
